<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Team 1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageButton
            android:id="@+id/decreaseTeam1"
            style="@style/MinusButton"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="Minus"
            android:onClick="decreaseScore" />

        <TextView
            android:id="@+id/score1"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageButton
            android:id="@+id/increaseTeam1"
            style="@style/PlusButton"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="Plus"
            android:onClick="increaseScore" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:text="Team 2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageButton
            android:id="@+id/decreaseTeam2"
            style="@style/MinusButton"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_alignParentStart="true"

            android:layout_centerVertical="true"
            android:contentDescription="Minus"
            android:onClick="decreaseScore" />

        <TextView
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_centerVertical="true"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/increaseTeam2"
            style="@style/PlusButton"
            android:layout_width="@dimen/buttonSize"

            android:layout_height="@dimen/buttonSize"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="Plus"
            android:onClick="increaseScore" />

    </RelativeLayout>


</LinearLayout>